# Speedrun

./: Cargo.toml
src/: lib.rs
src/stock/: mod.rs
src/stock/hot/: mod.rs  tgb.rs  xueqiu.rs
src/stock/info/: cls.rs  individual.rs  market.rs  mod.rs
src/stock/realtime/: mod.rs  quote.rs  zh.rs
src/stock_feature/: mod.rs  util.rs
src/stock_feature/lhb/: Detail.rs  Hyyyb.rs  mod.rs
src/utils/: de.rs
