[package]
name = "Speedrun"
version = "0.1.0"
authors = ["FangJinghui <geoffrey.fang@autocore.ai>"]
edition = "2018"

[dependencies]
ureq = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
itertools = "0.10"
prettytable-rs = "^0.8"
scraper = "^0.19"